@@ -1,3 +1,10 @@
+2004-08-20 Chris Wiebe
+
+	make PathUtil visible
+	* browser/org/eclipse/cdt/internal/core/browser/PathUtil.java
+	* browser/org/eclipse/cdt/internal/core/browser/TypeReference.java
+	* browser/org/eclipse/cdt/internal/core/browser/TypeSearchScope.java
+
 2004-08-18 Alain Magloire
 
 	Work on the ResolverModel, we make the Core Model aware of the changes.
